- Worklist changes:
   Sample Quality: Omit Bioanalyzer method, frag size from, and frag size to
   Library Prep: Omit library conc, Bioanalyzer method, gel size range to and gel size range from
   Cluster Gen: Omit Sample conc (pM)
   Seq run: Omit clusters per tile
   Data pipeline: Omit clusters per tile and PhiX error rate


5.1.9.2 (Aug 9, 2011)
----------------------
- Fixed null pointer exception in SaveRequest that occurred when estimated price warning email was sent and
  billing contact email was null.

5.1.9.1 (Aug 1, 2011)
-----------------------
- Fixed bugs in sample sheet upload

5.1.9 (July 28, 2011)
-----------------------
- Replaced sample sheet upload with new version that handles all editable fields
- Make 'additional lanes to sequence' on the samples view more prominent on 'Add services' window.  (Highlight and move to left).
- Usage charts show only whole numbers on vertical axis.
- User needs to be able to select index tag from dropdown on samples grid on sequencing request where lab has already prepped library.
- Fix the permissions for the fdt upload and download servlets so that the Orion application can write to the directory created under the fdt staging dir. 

5.1.8.1 (July 23, 2011)
-----------------------
- Added transfer logging for fdt uploads and download using java main (hci.gnomex.httpclient.TransferLoggerMain)
- Make fdt user and group in FDT servlets property driven
- Add missing fdt properties to sql populate script
- Added Usage view to GNomEx to show activity by lab and by week in chart form

5.1.8 (July 17, 2011)
-----------------------
- Upload/download logs for flex and html http uploads and downloads
- Fixed bug that was causing save error when adding lanes to a request (codeApplication was blank)

5.1.7.4 (July 16, 2011)
-----------------------
- Fix download folders bug that was causing number parsing exception when folder contained character 'E'
- Allow folders created in 'Organize files' window to be removed.

