@@ -15,6 +15,7 @@
    Cluster Gen: Omit Sample conc (pM)
    Seq run: Omit clusters per tile
    Data pipeline: Omit clusters per tile and PhiX error rate
+   Data pipleline: Add read read1 clusters passed filters (M), read2 clusters passed filters, Q30 (GB)
 
 
 5.1.9.2 (Aug 9, 2011)
